@@ -18,6 +18,7 @@ export class TempAnnotationService {
   constructor(public http:HttpClient) {}
   
   getAll = function (collectionId, documentId, annotatorId=null) {
+    // console.error("TempAnnotationService: getAll():", collectionId, documentId, annotatorId);
     return new Promise((resolve, reject) => {
     var uri = './api/collections/' + collectionId + '/documents/' + documentId + '/temp_annotations';
     if (annotatorId) {
@@ -34,6 +35,7 @@ export class TempAnnotationService {
   };
 
   get(collectionId, documentId, annotationId) {
+    // console.error("TempAnnotationService: get():", collectionId, documentId, annotationId);
     return new Promise((resolve, reject) => {
     this.http.get('./api/collections/' + collectionId + '/documents/' + documentId + '/temp_annotations/' + annotationId)
       .subscribe(function (data) {
@@ -46,6 +48,7 @@ export class TempAnnotationService {
   };
 
   save(collectionId, documentId, annotationData) {
+    // console.error("TempAnnotationService: save():", collectionId, documentId, annotationData);
     return new Promise((resolve, reject) => {
     this.http.post('./api/collections/' + collectionId + '/documents/' + documentId + '/temp_annotations',{
       data: annotationData
@@ -63,6 +66,7 @@ export class TempAnnotationService {
   };
 
   update(annotationData) {
+    // console.error("TempAnnotationService: update():", annotationData);
     return new Promise((resolve, reject) => {
     this.http.put('./api/collections/' + annotationData.collection_id + '/documents/' + annotationData.document_id + '/temp_annotations/' + annotationData._id,{
       data: annotationData
@@ -80,6 +84,7 @@ export class TempAnnotationService {
   };
 
   destroy = function (collectionId, documentId, annotationId) {
+    // console.error("TempAnnotationService: destroy():", collectionId, documentId, annotationId);
     return new Promise((resolve, reject) => {
     this.http.delete('api/collections/' + collectionId + '/documents/' + documentId + '/temp_annotations/' + annotationId)
       .subscribe((data)=> {
